<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DetailsActivity" >

    <TextView
        android:id="@+id/details_text_price"
        style="@style/CodeFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/details_button_follow"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/details_text_name"
        android:layout_marginTop="23dp"
        android:text="@string/details_text_price1" />

    <VideoView
        android:id="@+id/videoView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/details_button_pics" />

    <Button
        android:id="@+id/details_button_buy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/details_button_follow"
        android:layout_alignBottom="@+id/details_button_follow"
        android:layout_alignRight="@+id/videoView1"
        android:background="@drawable/roundedbutton"
        android:onClick="onBuy"
        android:text="@string/details_button_buy" />

    <Button
        android:id="@+id/details_button_pics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:background="@drawable/roundedbutton"
        android:onClick="onPics"
        android:text="@string/details_button_pic" />

    <TextView
        android:id="@+id/details_text_name"
        style="@style/CodeFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/details_text_name" />

    <ImageView
        android:id="@+id/details_image_thumb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/details_button_pics"
        android:layout_alignLeft="@+id/details_button_pics"
        android:layout_alignTop="@+id/details_text_price"
        android:layout_toLeftOf="@+id/details_button_follow"
        android:src="@drawable/ic_launcher" />

    <Button
        android:id="@+id/details_button_follow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/details_image_thumb"
        android:layout_centerHorizontal="true"
        android:background="@drawable/roundedbutton"
        android:onClick="onFollow"
        android:text="@string/details_button_follow" />

</RelativeLayout>