<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EnterIDActivity" >

    <Button
        android:id="@+id/main_button_submit"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/main_text_enterid"
        android:layout_alignRight="@+id/main_text_enterid"
        android:layout_below="@+id/main_edit_code"
        android:layout_marginTop="39dp"
        android:background="@drawable/roundedbutton"
        android:onClick="onSubmit"
        android:text="@string/main_button_submit" />

    <Button
        android:id="@+id/main_button_upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/main_button_submit"
        android:layout_alignRight="@+id/main_button_submit"
        android:layout_below="@+id/main_button_submit"
        android:layout_marginTop="36dp"
        android:background="@drawable/roundedbutton"
        android:onClick="onUpload"
        android:text="@string/main_button_upload" />

    <EditText
        android:id="@+id/main_edit_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_text_enterid"
        android:layout_centerHorizontal="true"
        android:ems="10" />

    <TextView
        android:id="@+id/main_text_enterid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_button_scan"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:text="@string/main_text_enterid" />

    <Button
        android:id="@+id/main_button_scan"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/main_text_enterid"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/main_text_enterid"
        android:layout_marginTop="36dp"
        android:background="@drawable/roundedbutton"
        android:onClick="onScan"
        android:text="@string/main_button_scan" />

</RelativeLayout>
